<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/add_meeting_layout"
    tools:context=".ui.view.AddMeetingActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/form_layout"
        app:layout_scrollFlags="scroll|enterAlways"
        app:titleTextColor="@color/white">

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:id="@+id/form_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:scrollbars = "vertical"
            android:padding="@dimen/fab_margin">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/form_subject_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/objet"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/form_subject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="20"
                    android:textColor="@color/colorText"
                    android:textStyle="bold" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/spinner_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin"
                android:hint="@string/salle"
                app:errorEnabled="true">

                <AutoCompleteTextView
                    android:id="@+id/spinner"
                    style="@style/Theme.Mareu.field"
                    android:inputType="none"
                    android:orientation="horizontal"
                    tools:ignore="LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/time_picker_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/time_picker_start_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/text_margin"
                    android:layout_weight="0.5"
                    android:hint="@string/start_reunion"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/time_picker_start"
                        style="@style/Theme.Mareu.field"
                        android:focusable="false"
                        android:inputType="time"
                        android:paddingTop="@dimen/fab_margin"
                        android:paddingBottom="@dimen/fab_margin" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/time_picker_end_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/text_margin"
                    android:layout_weight="0.5"
                    android:hint="@string/end_reunion"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/time_picker_end"
                        style="@style/Theme.Mareu.field"
                        android:focusable="false"
                        android:inputType="time"
                        android:paddingTop="@dimen/fab_margin"
                        android:paddingBottom="@dimen/fab_margin" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_contributor"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin"
                android:hint="@string/participant"
                app:endIconDrawable="@drawable/ic_add"
                app:endIconMode="custom"
                app:errorEnabled="true">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chipGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/contributor_email"
                    style="@style/Theme.Mareu.field"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/containedButton"
                style="@style/Theme.Mareu.field"
                android:text="@string/btn_check_register"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>