<resources>
    <string name="app_name" translatable="false">Ma réu</string>
    <string name="add_name_toolbar">Adding Meeting</string>
    <string name="delete">delete</string>
    <string name="location" translatable="false">%1$s - %2$s - %3$s</string>
    <string name="btn_check_register">Adding Meeting</string>
    <string name="participant">Contributor</string>
    <string name="salle">Room</string>
    <string name="objet">Object</string>
    <string name="start_reunion">Start meeting</string>
    <string name="end_reunion">End meeting</string>

    <string name="e_is_empty">This field cannot be empty.</string>
    <string name="e_choose_location">You have to choose a room.</string>
    <string name="e_time_before">The end date / time cannot be earlier than the start of the meeting.</string>
    <string name="e_email_invalid">Email address is invalid.</string>
    <string name="e_min_contibutor">There must be at least 1 contributor.</string>
    <string name="e_meeting_exist">A meeting is already in the room at this time.</string>

    <string name="filter_all">Display all</string>
    <string name="filter_location">Sort by Room</string>
    <string name="filter_date">Sort by Date</string>
    <string name="filter">Filter</string>
    <string name="a_choose_location">Choice of Location</string>
    <string name="add_button">Create Meeting</string>
    <string name="color_meeting">Color Meeting</string>
</resources>