...
                android:id="@+id/chipGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#F3EEEE" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/form_subject2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/colorText"
                android:maxLines="1"
                android:lines="1"
...
